--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
      <a href="">FF</a>
      <a href="">No-FF</a>
      <a href="">Reset</a>
+ <script>/* Metrika */</script>    
  </body>
 </html>  
